--- a/Project 1/Project 1/index.html
+++ b/Project 1/Project 1/index.html
@@ -8,6 +8,8 @@
   <!--<script language="javascript" src="libraries/p5.play.js"></script>-->
   <script language="javascript" src="libraries/p5.collide2d.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="ghost.js"></script>
+  <script language="javascript" type="text/javascript" src="pacman_pellets.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
